Salesforce/main/default/objects/Bitacora_NC__c/Bitacora_NC__c.object-meta.xml
<CustomObject>
    <description>Tendrá información del estado que surge de cada actualización diaria de las notas de crédito obtenidas directamente de SAP. Aquí se podrá analizar que ocurro en cada caso.</description>
    <label>Bitacora_NC</label>
    <nameField>
        <label>Nombre de Bitacora_NC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bitacora_NCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>