Salesforce/main/default/objects/Bitacora_NC__c/fields/Cantidad_Registros_SF__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Registros_SF__c</fullName>
    <label>Cantidad Registros SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>