Salesforce/main/default/objects/Bitacora_NC__c/fields/Fecha_Desde__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Desde__c</fullName>
    <label>Fecha Desde</label>
    <type>Date</type>
</CustomField>