Salesforce/main/default/objects/Bitacora_NC__c/fields/fkart__c.field-meta.xml
<CustomField>
    <fullName>fkart__c</fullName>
    <label>fkart</label>
    <length>4</length>
    <type>Text</type>
</CustomField>