Salesforce/main/default/objects/Bitacora_NC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>fkart__c</columns>
    <columns>vbtyp__c</columns>
    <columns>numero_lote__c</columns>
    <columns>Fecha_Desde__c</columns>
    <columns>Fecha_Hasta__c</columns>
    <columns>Orden__c</columns>
    <columns>sociedad__c</columns>
    <columns>Cantidad_Registros_SAP__c</columns>
    <columns>Cantidad_Registros_SF__c</columns>
    <columns>Iniciar_AcItems__c</columns>
    <columns>Copiado_desde_Sap__c</columns>
    <columns>Log__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <language>es</language>
</ListView>